<resources>

    <!-- Main activity-->
    <string name="app_name">Auto Bartender</string>
    <string name="btn_settings">Settings</string>

    <!--    various default values-->
    <string name="default_title">Title</string>
    <string name="default_description">Description</string>
    <string name="default_ingredient_list">• -- oz unknown ingredient\n• -- shots unknown ingredient</string>
    <string name="default_ingredient_name">Unknown Ingredient</string>
    <string name="default_ingredient_amount">-- mL</string>
    <string name="default_recipe_name">Unknown Recipe</string>
    <string name="default_user">Unknown User</string>
    <string name="default_alcohol_content">Unknown Proof</string>
    <string name="default_machine_name">Unknown Machine</string>

    <!--    recipe list activity - sort orders are meant to be looked up by name - see RecipeManager.RecipeSortOrder-->
    <string name="title_activity_recipe_list">Recipe List</string>
    <string name="sort_by">Sort by:</string>
    <string name="SORT_ORDER_ALPHABETICAL">Alphabetical</string>
    <string name="SORT_ORDER_RECENT">Most Recent</string>
    <string name="SORT_ORDER_ALC_CONTENT_HL">Proof ↘️</string>
    <string name="SORT_ORDER_ALC_CONTENT_LH">Proof ↗️</string>
    <string name="SORT_ORDER_DEFAULT">No Sorting</string>

    <!--    inventory status activity-->
    <string name="title_activity_inv_status">Inventory Status</string>
    <string name="no_ingredient">No Ingredient Installed</string>
    <string name="format_slot_num">Slot %d:</string>
    <string name="machine">Machine:</string>
    <string name="machine_connection_not">Not connected</string>
    <string name="refresh">Refresh</string>

    <!--    drink queue activity-->
    <string name="title_activity_drink_queue">Drink Queue</string>
    <string name="recipe_name_user_id">%s - %s</string>
    <string name="order_status_fail">Drink request failed ): dont know why lol</string>
    <string name="order_status_working">Sending drink request…</string>
    <string name="order_status_success">Drink request successful (:</string>
    <string name="machine_sync_yes">Synced to Machine</string>
    <string name="machine_sync_no">Not Synced</string>

    <!--    Recipe editing activity-->
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_name_hint">Enter your recipe name here</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_description_hint">Enter your recipe description here</string>
    <string name="recipe_amount_hint">Amount</string>
    <string name="recipe_add_ingredient">Add Ingredient</string>
    <string name="description_ingredient_amount">Amount of ingredient</string>
    <string name="new_recipe">New Recipe</string>
    <array name="units">
        <item>mL</item>
        <item>oz</item>
        <item>shots</item>
    </array>

    <!-- RecipeInfo helper module thing-->
    <string name="order_button">Order this drink now</string>
    <string name="edit_drink">Edit Drink</string>
    <string name="suffix_ml">%d mL</string>
    <string name="image">Image of a drink</string>
    <string name="can_make_drink">Ready to make</string>
    <string name="cant_make_drink">Missing ingredients</string>
    <string name="recipe_alcolol_pct_format">%d%% Alcohol</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="ingredient_list_row_format_mL">• %d mL %s \n</string> <!--    TODO make the unit parameterized-->

    <!-- Preferences and Settings Activity-->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_user_title">User Preferences</string>
    <string name="pref_category_machine_title">Machine Preferences</string>
    <string name="pref_category_network_title">Network Data Preferences</string>

    <string name="pref_userID_title">Username</string>
    <string name="pref_userID_summary">Your username is used to identify you and keep track of which drinks belong to you</string>

    <string name="pref_add_machine_title">Add a Machine</string>
    <string name="pref_add_machine_summary">Add a new bartender machine with its unique ID and network address. And you can give it a fun name!</string>
    <string name="pref_add_machine_id_hint">Your machine ID</string>
    <string name="pref_add_machine_addr_hint">Your machine URL</string>
    <string name="pref_add_machine_name_hint">A name for your machine</string>

    <string name="pref_known_machines_title">Known Machines</string>
    <string name="pref_known_machines_none">You don\'t have any known machines saved</string>
    <string name="pref_known_machines_row_format">• %s - %s at %s\n</string>

    <string name="pref_fav_machine_title">Favorite Machine</string>
    <string name="pref_fav_machine_summary">Your favorite machine will be the default machine selected</string>

    <string name="pref_delete_machine_title">Delete Machine</string>
    <string name="pref_delete_machine_summary">Delete a machine from your list. You cannot undo this without manually re-adding it</string>

    <string name="pref_serverURL_title">Network Configuration</string>
    <string name="pref_serverURL_summary">Set appropriate networking parameters to enable connections between different configurations of this app and your Auto Bartender</string>
    <array name="pref_serverURL_entries">
        <item>Connect app emulator to local Simulator</item>
        <item>Connect app emulator to local hard-valued server</item>
    </array>

    <string name="pref_recipeDB_title">Recipe Database Location</string>
    <string name="pref_recipeDB_summary">Select which recipe database to use</string>
    <array name="pref_recipeDB_entries">
        <item>Get recipes from CNU File Server</item>
        <item>Get recipes from hardcoded local DB server</item>
    </array>

    <string name="pref_inv_refresh_tm_title">Inventory Refresh Time</string>
    <string name="pref_inv_refresh_tm_summary">Time in seconds between inventory refreshes</string>

    <string name="pref_dq_refresh_tm_title">Drink Queue Refresh Time</string>
    <string name="pref_dq_refresh_tm_summary">Time in seconds between drink queue refreshes</string>

    <!--    Ingredient Names TODO make more of them-->
    <string name="ING_NAME_COKE">Coke</string>
    <string name="ING_NAME_FIREBALL">Fireball Whisky</string>
    <string name="ING_NAME_FRUIT_PUNCH">Fruit Punch</string>
    <string name="ING_NAME_GIN">Gin</string>
    <string name="ING_NAME_OJ">Orange Juice</string>
    <string name="ING_NAME_RUM">Rum</string>
    <string name="ING_NAME_TEQUILA">Tequila</string>
    <string name="ING_NAME_UNKNOWN">"Unknown Ingredient"</string>
    <string name="ING_NAME_VODKA">Vodka</string>

    <!--    Datetime foolery ): -->
    <string name="time_ago_main">%s ago</string>
    <string name="time_ago_now">Just now</string>
    <string name="time_ago_d">%dd</string>
    <string name="time_ago_h">%dh</string>
    <string name="time_ago_m">%dm</string>
    <string name="time_ago_s">%ds</string>
</resources>