<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order_info.OrderInfoActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/can_make_drink_tv"
        android:text="@string/can_make_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"/>

    <TextView
        android:id="@+id/title_textView"
        android:text="@string/default_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/can_make_drink_tv" />

    <TextView
        android:id="@+id/desc_textView"
        android:text="@string/default_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <TextView
        android:id="@+id/ingredient_list_tv"
        android:text="@string/default_ingredient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/desc_textView" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_button"
        android:onClick="startRecipeOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_list_tv" />

    <Button
        android:id="@+id/edit_drink_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintStart_toEndOf="@+id/order_button"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_list_tv" />

    <TextView
        android:id="@+id/request_status_tv"
        android:text="@string/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_button"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="269dp" />
</androidx.constraintlayout.widget.ConstraintLayout>