<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_machine_id"
        android:hint="@string/pref_add_machine_id_hint"
        android:inputType="text"
        android:padding="@dimen/default_padding"
        android:layout_marginHorizontal="@dimen/thicc_padding"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_machine_addr"
        android:hint="@string/pref_add_machine_addr_hint"
        android:inputType="text"
        android:ems="10"
        android:padding="@dimen/default_padding"
        android:layout_marginHorizontal="@dimen/thicc_padding"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_machine_name"
        android:hint="@string/pref_add_machine_name_hint"
        android:inputType="text"
        android:ems="10"
        android:padding="@dimen/default_padding"
        android:layout_marginHorizontal="@dimen/thicc_padding"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>