<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipe_editor.RecipeEditorActivity">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/default_card_corner_rad"
        card_view:cardElevation="@dimen/default_card_elevation"
        android:layout_margin="@dimen/default_card_layout_margin"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/tv_recipe_name"
                android:text="@string/recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_recipe_name"
                android:inputType="text"
                android:hint="@string/recipe_name_hint"
                android:autofillHints="name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_recipe_description"
                android:text="@string/recipe_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_recipe_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_recipe_description"
                android:inputType="textMultiLine"
                android:hint="@string/recipe_description_hint"
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_description"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btn_more"
                android:text="@string/recipe_add_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@id/et_recipe_description"
                card_view:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_ingredient_list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardview">

        <include
            layout="@layout/row_recipe_edit"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>