<?xml version="1.0" encoding="utf-8"?>

<!--Main Activity includes app bar, navigation buttons at  bottom of screen, and content (fragment) in middle-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<!--    App bar-->
    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="625dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_main"
        />

<!--    Bottom Navigation Buttons-->
    <LinearLayout
        android:id="@+id/bottom_nav_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" >

        <Button
            android:id="@+id/launch_recipe_list"
            android:text="@string/title_activity_recipe_list"
            android:onClick="launchRecipeListFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/launch_inventory_monitor"
            android:text="@string/title_activity_inv_status"
            android:onClick="launchInventoryStatsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/launch_drink_monitor"
            android:text="@string/title_activity_drink_queue"
            android:onClick="launchDrinkQueueFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>